# systymn

./: .gitignore  Cargo.toml  README.md
data/: actions.txt  cities.txt  emotions_negative.txt  emotions_positive.txt  locations_interior.txt  locations_outdoor.txt  markov_seed.txt  names_female.txt  names_male.txt  names_neutral.txt  objects.txt  times_day.txt  times_night.txt
src/: app.rs  config.rs  emoji.rs  main.rs  search.rs
src/ai/: anthropic.rs  api.rs  hybrid.rs  local.rs  mod.rs
src/buffer/: history.rs  mod.rs  text.rs
src/commands/: generators.rs  mod.rs  parser.rs
src/ui/: editor.rs  mod.rs  suggestions.rs  synonyms.rs
