[package]
name = "systymn"
version = "0.1.0"
edition = "2021"
description = "Experimental AI text editor with perpetual morphing suggestions"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
unicode-width = "0.2"
